Add unit testing for controllers

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,2 @@
-<h1>Welcome to the rails app </h1>
-
-<p> <%= @post.id %> </p>
-<p> <%= @post.author_id %> </p>
-<p> <%= @post.title %> </p>
-<p> <%= @post.text %> </p>
+<h1>Posts#index</h1>
+<p>Here are list of posts by user <%= params[:user_id]%> </p>
