--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,14 @@
-<h1>Users</h1>
-<% @users.each do |user| %>
-    <p>
-        <% user.id %> <br />
-        <% user.name %> <br />
-        <% user.photo %> <br />
-        <% user.bio %>
-    </p>
-<% end %>
+<h2> ALL USERS </h2>
+<ul class="users-list">
+  <% @users.each do |user|%>
+    <li>
+      <img src=<%= user.photo %> alt=<%= user.name%> profile picture />
+      <div class="user-info">
+        <p class="user_name">
+          <%= link_to user.name, "/users/#{user.id}" %>
+        </p>
+        <p class="user_post-counter">Number of posts: <%= user.posts_counter %></p>
+      </div>
+    </li>
+  <%end%>
+</ul>
