--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,5 @@
 <div class="user-details">
-  <img src=<%= @user.photo %> alt=<%= @user.name%> profile picture />
+  <%= image_tag("profile-picture.jpg", width:'100vw') %>
   <div class="user-info">
     <p class="user_name"><%= @user.name %></p>
     <p class="user_post-counter">Number of posts: <%= @user.posts_counter %></p>
