--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -9,12 +9,12 @@
   <% @posts.each_with_index do |post, index|%>
     <li>
       <div class="post-info">
-        <p class="user-post-heading">Post #<%= (index + 1) %> </p>
+        <h2 class="user-post-heading">Post #<%= (index + 1) %> </h2>
         <p class="post-text"><%= post.text %></p>
-        <p class="comment-counter">
+        <h3 class="comment-counter">
           comments: <%= post.comments_counter %>,
           likes: <%= post.likes_counter %>
-        </p>
+        </h3>
       </div>
 
       <ul class="post-comments-list">
