--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,10 +15,10 @@
       <li>
         <h3 class="user-post_heading"> Post #<%= index + 1 %> </h3>
         <p class="post-text"><%= post.text %></p>
-        <h3 class="comment-counter">
+        <p class="comment-counter">
           comments: <%= post.comments_counter %>,
           likes: <%= post.likes_counter %>
-        </h3>
+        </p>
       </li>
     <%end%>
   </ul>
