--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,10 +11,10 @@
       <div class="post-info">
         <h2 class="user-post-heading">Post #<%= (index + 1) %> </h2>
         <p class="post-text"><%= post.text %></p>
-        <h3 class="comment-counter">
+        <p class="comment-counter">
           comments: <%= post.comments_counter %>,
           likes: <%= post.likes_counter %>
-        </h3>
+        </p>
       </div>
 
       <ul class="post-comments-list">
