update controller and fix lintrce

--- a/app/assets/stylesheets/users.css
+++ b/app/assets/stylesheets/users.css
@@ -125,3 +125,12 @@
   align-self: flex-end;
   justify-self: flex-end;
 }
+
+.post-title {
+  margin-bottom: 12px;
+  margin-top: 12px;
+}
+
+.form-control {
+  padding-left: 20px;
+}
