update routes and add function for likes,comments

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,13 +1,17 @@
-<h1>Add a new Post</h1>
+<h1 class='header'>Add a new Post</h1>
+
+<% flash.each do |key, message| %>
+  <p><%= message %></p>
+<% end %>
 
 <%= form_with model: @post, url: user_posts_path, method: :post, local: true, class: "form-control" do |form| %>
   <div>
-    <%= form.label :title, "My Post Title" %><br>
+    <%= form.label :title, "Enter Your Title" %><br>
     <%= form.text_field :title, size: "150x5", class:"post-title" %>
   </div>
 
   <div>
-    <%= form.label :text, "My Post Text" %><br>
+    <%= form.label :text, "Enter Your Text" %><br>
     <%= form.text_area :text, size: "150x5", class:"post-title"%>
   </div>
 
