--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -21,4 +21,16 @@
     <% end %>
   </ul>
 </li>
+
+<button>
+  <%= link_to 'Add a Comment', new_user_post_comment_path(@user, @post) %>
+</button>
+
+<%= form_with model: @like, url: user_post_likes_path(@user, @post) do |form| %>
+  <div>
+    <%= form.button "Add a like !", type: "submit" %>
+  </div>
+<% end %>
+
+
 </section>
