--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
 <ul class="users-list">
   <% @users.each do |user|%>
     <li>
-      <%= image_tag("profile-picture.jpg", width:'100vw') %>
+    <img class='profile-index-photo' src='<%= user.photo %>' alt="<%= user.name %>'s profile picture" />
       <div class="user-info">
         <p class="user_name">
           <%= link_to user.name, "/users/#{user.id}" %>
