--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -9,7 +9,7 @@
   <% @posts.each_with_index do |post, index|%>
     <li>
       <div class="post-info">
-        <h2 class="user-post-heading">Post #<%= (index + 1) %> </h2>
+        <h3 class="user-post_heading"> <%= link_to "Post ##{index+1}" , user_post_path(@user, post) %></h3>
         <p class="post-text"><%= post.text %></p>
         <p class="comment-counter">
           comments: <%= post.comments_counter %>,
