--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,32 +1,64 @@
-<h2 class='sign-up-message'>Sign up</h2>
+<div class="edit-user-css">
+<h2>Edit your info <i class="italic-custom-name"><%= current_user.name %></i></h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
-    <%= f.text_field :name, class:"form-control", placeholder: 'Name'%>
+    <%= f.label :name %><br />
+    <%= f.text_field :name, placeholder: "Name", class:"form-control" %>
   </div>
 
   <div class="field">
-    <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: 'Email' %>
+    <%= f.label :email %><br />
+    <%= f.email_field :email, placeholder: "Email", autofocus: true, autocomplete: "email" %>
+  </div>
+  
+  <div class="field">
+    <%= f.text_field :photo, placeholder: "Add your photo URL", class:"form-control" %>
   </div>
 
   <div class="field">
+    <%= f.text_field :bio, placeholder: "Add your bio here", class:"form-control" %>
+  </div>
+
+
+  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+  <% end %>
+
+  <div class="field">
+    <i>(leave blank if you don't want to change it)</i><br />
+    <%= f.password_field :password, placeholder: "Password", autocomplete: "new-password" %>
     <% if @minimum_password_length %>
-    <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password", placeholder: 'Password' %>
+      <br />
+      <em><%= @minimum_password_length %> characters minimum</em>
+    <% end %>
   </div>
 
   <div class="field">
-    <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: 'Password confirmation' %>
+    <%= f.password_field :password_confirmation, placeholder: "Password confirmation", autocomplete: "new-password" %>
+  </div>
+
+  <div class="field">
+    <i>(we need your current password to confirm your changes)</i><br />
+    <%= f.password_field :current_password, placeholder: "Current password here", autocomplete: "current-password" %>
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "Update" %>
   </div>
 <% end %>
 
-<div class='shared-links-css'>
-<%= render "devise/shared/links" %>
+</div>
+
+<div class="cancel-account-css">
+<h3>Cancel my account</h3>
+
+<div>
+<p class="unhappy">Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+</div>
+
+<%= link_to "Go back to the previous page", :back %> <br />
+<%= link_to "logout", user_session, method: :delete %>
 </div>
