--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -10,6 +10,7 @@
     <li>
       <div class="post-info">
         <h3 class="user-post_heading"> <%= link_to "Post ##{index+1}" , user_post_path(@user, post) %></h3>
+        <%= button_to "Delete", user_post_path(@user, post), method: :delete %>
         <p class="post-text"><%= post.text %></p>
         <p class="comment-counter">
           comments: <%= post.comments_counter %>,
@@ -22,6 +23,9 @@
           <li>
             <span class="comment-author"><%= comment.author.name %>:</span>
             <span><%= comment.text %>:</span>
+            <% if can? :manage, comment %>
+              <%= button_to "Delete", user_post_comment_path(comment.author, post, comment), method: :delete %>
+            <% end %>
           </li>
         <% end %>
       </ul>
