--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
     <img class='profile-index-photo' src='<%= @user.photo %>' alt="<%= @user.name %>'s profile picture" />
     <div class="user-info">
       <p class="user-name"><%= @user.name %></p>
-      <p class="user-post-counter">Number of posts: <%= @user.posts_counter %></p>
+      <p class="user-post-counter">Number of posts: <%= @user.posts.count %></p>
     </div>
   </div>
   <div class="bio-container">
@@ -17,7 +17,7 @@
         <%= link_to post.title, user_post_path(@user, post) %>
         <p class="post-text"><%= post.text %></p>
         <p class="comment-counter">
-          comments: <%= post.comments_counter %>,
+          comments: <%= post.comments.count %>,
           likes: <%= post.likes_counter %>
         </p>
       </li>
